--- a/i3/config
+++ b/i3/config
@@ -205,3 +205,5 @@ client.placeholder      #000000 #000000 #ffffff #000000   #000000
 bar {
         status_command i3status
 }
+
+exec feh --bg-fill ~/Pictures/p6kxq9.png
