Updating picom and arch setup

--- a/picom.conf
+++ b/picom.conf
@@ -18,7 +18,7 @@ backend = "glx";
 #
 #################################
 
-glx-no-stencil = true;
+# glx-no-stencil = true; # deprecated
 
 # GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
 # My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
@@ -37,7 +37,7 @@ glx-copy-from-front = false;
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
 # Recommended if it works.
 
-glx-no-rebind-pixmap = true;
+# glx-no-rebind-pixmap = true; # deprecated
 
 
 use-damage = false;
@@ -82,7 +82,7 @@ shadow-opacity = 0.8;
 # shadow-exclude = "n:e:Notification";
 
 shadow-exclude = [
-	"_GTK_FRAME_EXTENTS@:c",
+	"_GTK_FRAME_EXTENTS@",
 	# Removed to avoid no-shadow in modal dialog windows.
 	# "! name~=''",
     "name = 'Notification'",
@@ -135,7 +135,7 @@ shadow-exclude = [
 	"class_g ?= 'vokoscreen' && argb",
 	"name = 'Área'",
 	"name *= 'Cuenta regresiva'",
-	"_NET_WM_WINDOW_TYPE:a *= '_KDE_NET_WM_WINDOW_TYPE_OVERRIDE'"
+	"_NET_WM_WINDOW_TYPE *= '_KDE_NET_WM_WINDOW_TYPE_OVERRIDE'"
 #	"override_redirect = true"
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
@@ -208,11 +208,12 @@ blur-background-exclude = [
 	"window_type = 'popup_menu'",
 	"window_type = 'utility'",
     "window_type = 'desktop'",
-	"_GTK_FRAME_EXTENTS@:c"
+	"_GTK_FRAME_EXTENTS@"
 ];
-opacity-exclude = [
-    "class_g = 'Emacs'"
-];
+	
+# opacity-exclude = [
+#     "class_g = 'Emacs'"
+# ];
 
 
 #################################
@@ -248,7 +249,7 @@ mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
+# refresh-rate = 75; # deprecated
 
 
 #vsync = true;
@@ -265,7 +266,7 @@ detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
 
-resize-damage = 2;
+# resize-damage = 2; # deprecated
 
 
 
